# Espressif-32

./: .gitignore  BranchInfo.md  CMakeLists.txt  README.md  README_EN.md  extra_script.py  generate_build_flags.py  manage.py  platformio.ini
include/: mqtt_config.h
lib/iot_gpio_ctl/include/: iot_gpio_config.h
lib/iot_gpio_ctl/src/: iot_gpio_config.c
lib/iot_mqtt_oc/include/: iot_cloud_oc.h  mqtt_config.h  mqtt_profile_package.h
lib/iot_mqtt_oc/src/: iot_cloud_oc.c  mqtt_profile_package.c
lib/iot_wifi_connect/include/: iot_wifi_sta.h
lib/iot_wifi_connect/src/: iot_wifi_sta.c
sample/blink/: main.c
sample/mqtt_example/: CMakeLists.txt  main.c
sample/mqtt_example/lib/iot_mqtt_oc/src/: mqtt_profile_package.c
sample/uart_loopback/: CMakeLists.txt
src/: CMakeLists.txt  Services.json  main.c
src/application/wifi_iot/app/blink/: CMakeLists.txt
src/application/wifi_iot/app/blink/include/: iot_gpio_config.h
src/application/wifi_iot/app/mqtt_example/lib/iot_mqtt_oc/include/: mqtt_profile_package.h
src/application/wifi_iot/app/mqtt_example/lib/iot_mqtt_oc/src/: iot_cloud_oc.c  mqtt_profile_package.c
src/application/wifi_iot/app/mqtt_example/lib/iot_wifi_connect/include/: iot_wifi_sta.h
src/application/wifi_iot/app/multi_task/: CMakeLists.txt  main.c
src/application/wifi_iot/app/multi_task/include/: main.h
src/application/wifi_iot/app/multi_task/lib/osThread/include/: osThread.h
src/application/wifi_iot/app/multi_task/lib/osThread/src/: osThread.c
src/application/wifi_iot/app/startup/: CMakeLists.txt  main.c
src/application/wifi_iot/app/startup/include/: main.h
src/application/wifi_iot/app/uart_loopback/: main.c
src/application/wifi_iot/app/uart_loopback/include/: main.h
src/application/wifi_iot/app/uart_loopback/lib/iot_uart_ctl/include/: iot_uart_config.h
src/application/wifi_iot/app/uart_loopback/lib/iot_uart_ctl/src/: iot_uart_config.c
src/application/wifi_iot/app/wifi_ap_configure/: CMakeLists.txt  main.c
src/application/wifi_iot/app/wifi_ap_configure/lib/NVS/include/: netNVS.h
src/application/wifi_iot/app/wifi_ap_configure/lib/NVS/src/: netNVS.c
src/application/wifi_iot/app/wifi_ap_configure/lib/ap_wifi_config/include/: ap_wifi_config.h
src/application/wifi_iot/app/wifi_ap_configure/lib/ap_wifi_config/src/: ap_wifi_config.c
src/application/wifi_iot/app/wifi_ap_configure/lib/http_server_lite/src/: http_server_lite.c
src/application/wifi_iot/app/wifi_ap_configure/lib/iot_gpio/src/: iot_gpio_config.c
src/application/wifi_iot/app/wifi_ap_configure/lib/iot_mqtt_oc/include/: mqtt_config.h  mqtt_profile_package.h
src/application/wifi_iot/app/wifi_ap_configure/lib/iot_mqtt_oc/src/: iot_cloud_oc.c  mqtt_profile_package.c
src/application/wifi_iot/app/wifi_ap_configure/lib/json_lite/include/: json_lite.h
src/application/wifi_iot/app/wifi_ap_configure/lib/json_lite/src/: json_lite.c
src/application/wifi_iot/app/wifi_ap_configure/lib/osThread/doc/: README.md
src/application/wifi_iot/app/wifi_ap_configure/lib/osThread/include/: osThread.h
src/application/wifi_iot/app/wifi_ap_configure/lib/osThread/src/: osThread.c
src/application/wifi_iot/app/wifi_smartconfig/: CMakeLists.txt  main.c
src/application/wifi_iot/app/wifi_smartconfig/lib/iot_wifi_config/include/: iot_wifi_config.h
src/application/wifi_iot/app/wifi_smartconfig/lib/iot_wifi_config/src/: iot_wifi_config.c
src/setting/: partition.csv
